@@ -18,85 +18,103 @@
 package org.openqa.selenium.grid.docker;
 
 import com.google.common.collect.HashMultimap;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableMultimap;
 import com.google.common.collect.Multimap;
-import io.opentelemetry.trace.Tracer;
 import org.openqa.selenium.Capabilities;
+import org.openqa.selenium.Platform;
 import org.openqa.selenium.docker.Docker;
 import org.openqa.selenium.docker.DockerException;
 import org.openqa.selenium.docker.Image;
-import org.openqa.selenium.docker.ImageNamePredicate;
 import org.openqa.selenium.grid.config.Config;
 import org.openqa.selenium.grid.config.ConfigException;
-import org.openqa.selenium.grid.node.local.LocalNode;
+import org.openqa.selenium.grid.node.SessionFactory;
+import org.openqa.selenium.internal.Require;
 import org.openqa.selenium.json.Json;
+import org.openqa.selenium.remote.http.ClientConfig;
 import org.openqa.selenium.remote.http.HttpClient;
-import org.openqa.selenium.remote.http.HttpRequest;
-import org.openqa.selenium.remote.http.HttpResponse;
+import org.openqa.selenium.remote.tracing.Tracer;
 
-import java.io.IOException;
-import java.io.UncheckedIOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
-import java.util.Objects;
+import java.util.Map;
+import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.logging.Logger;
 
-import static java.util.logging.Level.WARNING;
-import static org.openqa.selenium.remote.http.HttpMethod.GET;
+import static org.openqa.selenium.Platform.WINDOWS;
 
 public class DockerOptions {
+
+  private static final String DOCKER_SECTION = "docker";
 
   private static final Logger LOG = Logger.getLogger(DockerOptions.class.getName());
   private static final Json JSON = new Json();
   private final Config config;
 
   public DockerOptions(Config config) {
-    this.config = Objects.requireNonNull(config);
+    this.config = Require.nonNull("Config", config);
   }
 
-  private URL getDockerUrl() {
+  private URI getDockerUri() {
     try {
-      String raw = config.get("docker", "url")
-          .orElseThrow(() -> new ConfigException("No docker url configured"));
-      return new URL(raw);
-    } catch (MalformedURLException e) {
-      throw new UncheckedIOException(e);
+      Optional<String> possibleUri = config.get(DOCKER_SECTION, "url");
+      if (possibleUri.isPresent()) {
+        return new URI(possibleUri.get());
+      }
+
+      Optional<String> possibleHost = config.get(DOCKER_SECTION, "host");
+      if (possibleHost.isPresent()) {
+        String host = possibleHost.get();
+        if (!(host.startsWith("tcp:") || host.startsWith("http:") || host.startsWith("https"))) {
+          host = "http://" + host;
+        }
+        URI uri = new URI(host);
+        return new URI(
+          "http",
+          uri.getUserInfo(),
+          uri.getHost(),
+          uri.getPort(),
+          uri.getPath(),
+          null,
+          null);
+      }
+
+      // Default for the system we're running on.
+      if (Platform.getCurrent().is(WINDOWS)) {
+        return new URI("http://localhost:2376");
+      }
+      return new URI("unix:/var/run/docker.sock");
+    } catch (URISyntaxException e) {
+      throw new ConfigException("Unable to determine docker url", e);
     }
   }
 
   private boolean isEnabled(HttpClient.Factory clientFactory) {
-    if (!config.getAll("docker", "configs").isPresent()) {
+    if (!config.getAll(DOCKER_SECTION, "configs").isPresent()) {
       return false;
     }
 
     // Is the daemon up and running?
-    URL url = getDockerUrl();
-    HttpClient client = clientFactory.createClient(url);
+    URI uri = getDockerUri();
+    HttpClient client = clientFactory.createClient(ClientConfig.defaultConfig().baseUri(uri));
 
-    try {
-      HttpResponse response = client.execute(new HttpRequest(GET, "/_ping"));
-      if (response.getStatus() != 200) {
-        LOG.warning(String.format("Docker config enabled, but daemon unreachable: %s", url));
-        return false;
-      }
-
-      return true;
-    } catch (UncheckedIOException e) {
-      LOG.log(WARNING, "Unable to ping docker daemon. Docker disabled: " + e.getMessage());
-      return false;
-    }
+    return new Docker(client).isSupported();
   }
 
-  public void configure(Tracer tracer, HttpClient.Factory clientFactory, LocalNode.Builder node)
-      throws IOException {
+  public Map<Capabilities, Collection<SessionFactory>> getDockerSessionFactories(
+    Tracer tracer,
+    HttpClient.Factory clientFactory) {
+
     if (!isEnabled(clientFactory)) {
-      return;
+      return ImmutableMap.of();
     }
 
-    List<String> allConfigs = config.getAll("docker", "configs")
+    List<String> allConfigs = config.getAll(DOCKER_SECTION, "configs")
         .orElseThrow(() -> new DockerException("Unable to find docker configs"));
 
     Multimap<String, Capabilities> kinds = HashMultimap.create();
@@ -111,18 +129,17 @@ public class DockerOptions {
       kinds.put(imageName, stereotype);
     }
 
-    HttpClient client = clientFactory.createClient(new URL("http://localhost:2375"));
+    HttpClient client = clientFactory.createClient(ClientConfig.defaultConfig().baseUri(getDockerUri()));
     Docker docker = new Docker(client);
 
     loadImages(docker, kinds.keySet().toArray(new String[0]));
 
     int maxContainerCount = Runtime.getRuntime().availableProcessors();
+    ImmutableMultimap.Builder<Capabilities, SessionFactory> factories = ImmutableMultimap.builder();
     kinds.forEach((name, caps) -> {
-      Image image = docker.findImage(new ImageNamePredicate(name))
-          .orElseThrow(() -> new DockerException(
-              String.format("Cannot find image matching: %s", name)));
+      Image image = docker.getImage(name);
       for (int i = 0; i < maxContainerCount; i++) {
-        node.add(caps, new DockerSessionFactory(tracer, clientFactory, docker, image, caps));
+        factories.put(caps, new DockerSessionFactory(tracer, clientFactory, docker, image, caps));
       }
       LOG.info(String.format(
           "Mapping %s to docker image %s %d times",
@@ -130,21 +147,13 @@ public class DockerOptions {
           name,
           maxContainerCount));
     });
+    return factories.build().asMap();
   }
 
   private void loadImages(Docker docker, String... imageNames) {
     CompletableFuture<Void> cd = CompletableFuture.allOf(
         Arrays.stream(imageNames)
-            .map(entry -> {
-              int index = entry.lastIndexOf(':');
-              if (index == -1) {
-                throw new RuntimeException("Unable to determine tag from " + entry);
-              }
-              String name = entry.substring(0, index);
-              String version = entry.substring(index + 1);
-
-              return CompletableFuture.supplyAsync(() -> docker.pull(name, version));
-            }).toArray(CompletableFuture[]::new));
+            .map(name -> CompletableFuture.supplyAsync(() -> docker.getImage(name))).toArray(CompletableFuture[]::new));
 
     try {
       cd.get();
